<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/navbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_navbar"
        app:layout_constraintBottom_toBottomOf="@+id/logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/navbar_image" />

    <ImageView
        android:id="@+id/logo_text"
        android:layout_width="142dp"
        android:layout_height="59dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/cd_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_trivia" />

    <ImageView
        android:id="@+id/question_number_card"
        android:layout_width="322dp"
        android:layout_height="55dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/cd_question_number_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navbar"
        app:srcCompat="@drawable/card_question_number" />

    <ImageView
        android:id="@+id/question_card"
        android:layout_width="322dp"
        android:layout_height="200dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/card_question_vector"
        android:contentDescription="@string/cd_question_card"
        android:elevation="40dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navbar"
        app:srcCompat="@drawable/card_question_vector" />

    <ImageView
        android:id="@+id/button_true"
        style="@style/button_position"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/button_background_vector"
        android:contentDescription="@string/cd_button_true"
        android:elevation="10dp"
        android:onClick="truePressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="@+id/question_card"
        app:layout_constraintTop_toBottomOf="@+id/question_card"
        app:srcCompat="@drawable/button_true" />

    <ImageView
        android:id="@+id/button_false"
        style="@style/button_position"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/button_background_vector"
        android:contentDescription="@string/cd_button_false"
        android:elevation="10dp"
        android:onClick="falsePressed"
        app:layout_constraintEnd_toEndOf="@+id/question_card"
        app:layout_constraintTop_toBottomOf="@+id/question_card"
        app:srcCompat="@drawable/button_false" />

    <ImageView
        android:id="@+id/button_prev"
        style="@style/button_position"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:layout_marginTop="129dp"
        android:background="@drawable/button_background_vector"
        android:contentDescription="@string/cd_button_prev"
        android:elevation="10dp"
        android:onClick="prevPressed"
        app:layout_constraintStart_toStartOf="@+id/question_card"
        app:layout_constraintTop_toBottomOf="@+id/question_card"
        app:srcCompat="@drawable/button_previous" />

    <ImageView
        android:id="@+id/button_next"
        style="@style/button_position"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:layout_marginTop="129dp"
        android:background="@drawable/button_background_vector"
        android:contentDescription="@string/cd_button_next"
        android:elevation="10dp"
        android:onClick="nextPressed"
        app:layout_constraintEnd_toEndOf="@+id/question_card"
        app:layout_constraintTop_toBottomOf="@+id/question_card"
        app:srcCompat="@drawable/button_next" />

    <TextView
        android:id="@+id/text_question"
        android:layout_width="250sp"
        android:layout_height="125sp"
        android:autoSizeMaxTextSize="23sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:elevation="55dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="Placeholder question"
        android:textColor="@color/dark_gray_main_text"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/question_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="@+id/question_card"
        app:layout_constraintTop_toTopOf="@+id/question_card"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/text_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/question_number_text"
        android:textColor="@color/dark_gray_main_text"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="@+id/question_number_card"
        app:layout_constraintEnd_toEndOf="@+id/question_number_card"
        app:layout_constraintStart_toStartOf="@+id/question_number_card"
        app:layout_constraintTop_toTopOf="@+id/question_number_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
